# DAA-mini

./: architecture.md  index.html  vercel.json
api/: hull.js  multi_route.js  power_triage.js
terrsentry/: CMakeLists.txt  package-lock.json  package.json  server.js
terrsentry/public/: app.js  index.html  style.css
terrsentry/src/: main.cpp
